--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # Dependency directories (remove the comment below to include it)
 vendor/
+
+# Specific binaries built as testing tools
+cmd/keyboard-io/keyboard-io
